[gd_scene load_steps=16 format=4 uid="uid://cxc38famjanh8"]

[ext_resource type="Script" path="res://Testing/optimize/grid_env_2.gd" id="1_42e63"]
[ext_resource type="Texture2D" uid="uid://dr7gb1ykxcqx4" path="res://Assets/testing123.png" id="1_n7euv"]
[ext_resource type="Script" path="res://Testing/optimize/battle_map.gd" id="3_8brp4"]
[ext_resource type="PackedScene" uid="uid://ch6hemh60xw54" path="res://Testing/optimize/TileSpawner.tscn" id="5_kx46n"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_a8lqy"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_3di2c"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_flnjx"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_5epxg"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_e6dwh"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_rp88q"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_idml3"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_g6ups"]
vertices = PackedVector2Array(8, 8, -8, 8, -8, -8, 8, -8)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)])
agent_radius = 0.0

[sub_resource type="NavigationPolygon" id="NavigationPolygon_f0ya1"]
vertices = PackedVector2Array(8, 8, -8, 8, -8, -8, 8, -8)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)])
agent_radius = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_xrkgl"]
texture = ExtResource("1_n7euv")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
5:1/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_idml3")
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
3:3/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_3di2c")
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
2:4/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_a8lqy")
3:4/0 = 0
3:4/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_flnjx")
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
3:5/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_5epxg")
4:5/0 = 0
5:5/0 = 0
5:5/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_g6ups")
6:5/0 = 0
6:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:5/0 = 0
7:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:5/0 = 0
9:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
3:6/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_e6dwh")
4:6/0 = 0
4:6/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_rp88q")
5:6/0 = 0
5:6/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_f0ya1")
6:6/0 = 0
6:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:6/0 = 0
7:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:6/0 = 0

[sub_resource type="TileSet" id="TileSet_4sff6"]
physics_layer_0/collision_layer = 1
navigation_layer_0/layers = 1
sources/0 = SubResource("TileSetAtlasSource_xrkgl")

[node name="GridEnv2" type="Node2D"]
script = ExtResource("1_42e63")

[node name="BattleMap" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAAABAAAAAAAAAAEAAAAFAAUAAAABAAEAAAAFAAUAAAABAAAAAAAGAAIAAAACAAAAAAAFAAUAAAADAAAAAAAFAAUAAAAEAAAAAAAFAAUAAAAFAAEAAAAFAAUAAAAEAAEAAAAFAAUAAAADAAEAAAAFAAUAAAACAAEAAAAFAAUAAAAAAAIAAAAFAAUAAAABAAIAAAAFAAUAAAACAAIAAAAFAAUAAAADAAIAAAAFAAUAAAAEAAIAAAAFAAUAAAAFAAIAAAAFAAUAAAAGAAIAAAAFAAUAAAAGAAMAAAAFAAUAAAAFAAMAAAAFAAUAAAAEAAMAAAAFAAUAAAADAAMAAAAFAAUAAAACAAMAAAAFAAUAAAABAAMAAAAFAAUAAAAAAAMAAAAFAAUAAAAHAAMAAAAFAAUAAAAGAAQAAAAFAAUAAAAFAAQAAAAFAAUAAAAEAAQAAAAFAAUAAAADAAQAAAAFAAUAAAACAAQAAAAFAAUAAAABAAQAAAAFAAUAAAAAAAQAAAAFAAUAAAD//wAAAAAAAAAAAAD//wEAAAAAAAEAAAD//wIAAAAAAAEAAAD//wMAAAAAAAEAAAAAAP//AAAGAAYAAAABAP//AAAAAAEAAAACAP//AAAFAAUAAAADAP//AAACAAEAAAAEAP//AAAGAAYAAAAFAP//AAAGAAYAAAAGAP//AAAGAAYAAAACAP7/AAAFAAUAAAADAP7/AAAFAAEAAAAEAP7/AAABAAIAAAAFAP7/AAABAAIAAAAIAP7/AAABAAIAAAAJAP//AAAAAAEAAAAJAAEAAAAFAAUAAAAJAAIAAAAFAAUAAAACAAUAAAAFAAUAAAAGAAYAAAAFAAUAAAAIAAYAAAAFAAUAAAAJAAYAAAAFAAUAAAAFAAYAAAAFAAUAAAAEAAYAAAAFAAUAAAADAAYAAAAFAAUAAAAKAAYAAAAFAAUAAAALAAYAAAAFAAUAAAALAAUAAAAFAAUAAAAMAAUAAAAFAAUAAAAMAAQAAAAFAAUAAAAMAAMAAAAFAAUAAAANAAMAAAAFAAUAAAANAAIAAAAFAAUAAAAOAAMAAAAFAAUAAAAOAAQAAAAFAAUAAAAOAAUAAAAFAAUAAAAOAAIAAAAFAAUAAAANAAYAAAAFAAUAAAAMAAYAAAAFAAUAAAAOAAYAAAAFAAUAAAAPAAYAAAAFAAUAAAAPAAUAAAAFAAUAAAANAAQAAAAFAAUAAAANAAUAAAAFAAUAAAAKAAIAAAAFAAUAAAAKAAAAAAAFAAUAAAAKAP//AAAFAAUAAAAKAP7/AAAFAAUAAAAJAP7/AAAGAAEAAAACAP3/AAAFAAUAAAADAP3/AAAFAAUAAAAEAP3/AAAFAAUAAAAFAP3/AAAFAAUAAAAHAP3/AAAFAAUAAAAIAP3/AAAFAAUAAAAJAP3/AAAFAAUAAAAKAP3/AAAFAAUAAAAKAPz/AAABAAAAAAAJAPz/AAABAAAAAAAIAPz/AAABAAAAAAAHAPz/AAABAAAAAAAGAPz/AAABAAAAAAAFAPz/AAABAAAAAAAEAPz/AAABAAAAAAADAPz/AAABAAAAAAACAPz/AAABAAAAAAABAPz/AAAAAAAAAAABAP3/AAAAAAEAAAABAP7/AAAAAAEAAAALAPz/AAACAAAAAAALAP3/AAACAAEAAAALAP7/AAACAAEAAAALAP//AAACAAEAAAALAAAAAAAFAAIAAAALAAEAAAAFAAUAAAALAAIAAAAFAAUAAAAKAAEAAAAFAAUAAAAJAAAAAAAFAAUAAAAIAP//AAAGAAYAAAAHAP//AAAGAAYAAAAHAP7/AAABAAIAAAAGAP7/AAABAAIAAAAGAP3/AAACAAYAAAAHAAAAAAAFAAUAAAAIAAAAAAAFAAUAAAAIAAEAAAAFAAUAAAAIAAIAAAAFAAUAAAAIAAMAAAAFAAUAAAAJAAMAAAAFAAUAAAAKAAMAAAAFAAUAAAALAAMAAAAFAAUAAAAMAAIAAAAFAAUAAAAMAAEAAAAFAAUAAAAMAAAAAAABAAAAAAAMAP//AAAGAAYAAAAMAP7/AAAGAAYAAAAMAP3/AAAGAAYAAAAMAPz/AAAGAAYAAAAMAPv/AAAGAAYAAAALAPv/AAAGAAYAAAAKAPv/AAAGAAYAAAAJAPv/AAAGAAYAAAAIAPv/AAAGAAYAAAAHAPv/AAAGAAYAAAAGAPv/AAAGAAYAAAAFAPv/AAAGAAYAAAAEAPv/AAAGAAYAAAADAPv/AAAGAAYAAAACAPv/AAAGAAYAAAABAPv/AAAGAAYAAAAAAPv/AAAGAAYAAAAAAPz/AAAGAAYAAAAAAP3/AAAGAAYAAAAAAP7/AAAGAAYAAAD//wQAAAAAAAEAAAD//wUAAAAAAAEAAAAAAAUAAAAFAAUAAAABAAUAAAAFAAUAAAD+/wAAAAAGAAYAAAD+/wEAAAAGAAYAAAD+/wIAAAAGAAYAAAD+/wMAAAAGAAYAAAD+/wQAAAAGAAYAAAD+/wUAAAAGAAYAAAD/////AAAGAAYAAAD+////AAAGAAYAAAABAAYAAAAFAAUAAAACAAYAAAAFAAUAAAACAAcAAAAFAAUAAAADAAcAAAAFAAUAAAAEAAcAAAAFAAUAAAAFAAcAAAAFAAUAAAAGAAcAAAAFAAUAAAAJAAcAAAAFAAUAAAAKAAcAAAAFAAUAAAALAAcAAAAFAAUAAAAMAAcAAAAFAAUAAAANAAcAAAAFAAUAAAAOAAcAAAAFAAUAAAAPAAcAAAAFAAUAAAAQAAcAAAACAAEAAAAPAAIAAAAFAAUAAAAPAAMAAAAFAAUAAAAPAAQAAAAFAAUAAAANAAEAAAAFAAUAAAALAAQAAAAFAAUAAAAKAAQAAAAFAAUAAAAJAAQAAAAFAAUAAAAIAAQAAAAFAAUAAAAHAAQAAAAFAAUAAAAKAAUAAAAFAAUAAAAJAAUAAAAFAAUAAAAIAAUAAAAFAAUAAAAHAAUAAAAFAAUAAAAGAAUAAAAFAAUAAAAOAAEAAAAFAAUAAAAPAAEAAAAFAAUAAAAQAAEAAAACAAEAAAAQAAIAAAACAAEAAAAQAAMAAAACAAEAAAAQAAQAAAACAAEAAAAQAAUAAAACAAEAAAAQAAYAAAACAAEAAAANAAAAAAABAAAAAAAOAAAAAAABAAAAAAAPAAAAAAABAAAAAAAQAAAAAAACAAAAAAARAAAAAAAGAAYAAAARAAEAAAAGAAYAAAARAAIAAAAGAAYAAAARAAMAAAAGAAYAAAARAAQAAAAGAAYAAAARAAUAAAAGAAYAAAARAAYAAAAGAAYAAAARAAcAAAAGAAYAAAARAAgAAAAGAAYAAAAQAAgAAAACAAIAAAAPAAgAAAABAAIAAAAOAAgAAAABAAIAAAANAAgAAAABAAIAAAAMAAgAAAABAAIAAAALAAgAAAABAAIAAAAKAAgAAAABAAIAAAAIAAgAAAABAAIAAAAHAAgAAAABAAIAAAAGAAgAAAABAAIAAAAFAAgAAAABAAIAAAAEAAgAAAABAAIAAAADAAgAAAABAAIAAAACAAgAAAABAAIAAAABAAgAAAABAAIAAAABAAcAAAAFAAUAAAAAAAcAAAAFAAUAAAAAAAYAAAAFAAUAAAD//wYAAAAAAAEAAAD+/wYAAAAGAAYAAAAGAAAAAAAFAAUAAAAGAAEAAAAFAAUAAAAFAAAAAAAFAAUAAAAHAAEAAAAFAAUAAAAHAAIAAAAFAAUAAAD//wcAAAAAAAEAAAD//wgAAAAAAAIAAAAAAAgAAAABAAIAAAAQAAkAAAAGAAYAAAARAAkAAAAGAAYAAAAPAAkAAAAGAAYAAAAOAAkAAAAGAAYAAAANAAkAAAAGAAYAAAAMAAkAAAAGAAYAAAALAAkAAAAGAAYAAAAIAAkAAAAGAAYAAAAHAAkAAAAGAAYAAAAGAAkAAAAGAAYAAAAFAAkAAAAGAAYAAAAEAAkAAAAGAAYAAAADAAkAAAAGAAYAAAACAAkAAAAGAAYAAAABAAkAAAAGAAYAAAAAAAkAAAAGAAYAAAD//wkAAAAGAAYAAAD+/wkAAAAGAAYAAAD+/wgAAAAGAAYAAAD+/wcAAAAGAAYAAAAHAAYAAAAFAAUAAAAHAAcAAAAFAAUAAAAIAAcAAAAFAAUAAAAJAAgAAAABAAIAAAAJAAkAAAAGAAYAAAAKAAkAAAAGAAYAAAADAAUAAAAFAAUAAAAEAAUAAAAFAAUAAAAFAAUAAAAFAAUAAAA=")
tile_set = SubResource("TileSet_4sff6")
script = ExtResource("3_8brp4")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(136, 41)
zoom = Vector2(2.51, 2.51)

[node name="OccupiedSpace" type="Node" parent="."]

[node name="PlayerSpawners" type="Node" parent="."]

[node name="Backline" parent="PlayerSpawners" node_paths=PackedStringArray("map") instance=ExtResource("5_kx46n")]
position = Vector2(8, 56)
map = NodePath("../../BattleMap")

[node name="Backline2" parent="PlayerSpawners" node_paths=PackedStringArray("map") instance=ExtResource("5_kx46n")]
position = Vector2(9, 89)
map = NodePath("../../BattleMap")

[node name="Backline3" parent="PlayerSpawners" node_paths=PackedStringArray("map") instance=ExtResource("5_kx46n")]
position = Vector2(8, 25)
map = NodePath("../../BattleMap")

[node name="Backline4" parent="PlayerSpawners" node_paths=PackedStringArray("map") instance=ExtResource("5_kx46n")]
position = Vector2(9, 119)
map = NodePath("../../BattleMap")

[node name="Frontline" parent="PlayerSpawners" node_paths=PackedStringArray("map") instance=ExtResource("5_kx46n")]
position = Vector2(40, 56)
map = NodePath("../../BattleMap")

[node name="Frontline2" parent="PlayerSpawners" node_paths=PackedStringArray("map") instance=ExtResource("5_kx46n")]
position = Vector2(39, 88)
map = NodePath("../../BattleMap")

[node name="Frontline3" parent="PlayerSpawners" node_paths=PackedStringArray("map") instance=ExtResource("5_kx46n")]
position = Vector2(40, 24)
map = NodePath("../../BattleMap")

[node name="Frontline4" parent="PlayerSpawners" node_paths=PackedStringArray("map") instance=ExtResource("5_kx46n")]
position = Vector2(40, 120)
map = NodePath("../../BattleMap")

[node name="Enemy Spawners" type="Node" parent="."]

[connection signal="request_move" from="BattleMap" to="." method="_on_request_move"]
